Bug 470625 - thin line on the border
Summary: thin line on the border
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.1
Platform: Debian stable Linux
: NOR task
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-04 11:36 UTC by Nikita
Modified: 2024-02-22 21:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.11
Sentry Crash Report:


Attachments
The arrow points to the wrong border. The small picture shows what it looks like in a presentation with a white background. (46.24 KB, image/png)
2023-06-04 11:36 UTC, Nikita
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita 2023-06-04 11:36:23 UTC
Created attachment 159459 [details]
The arrow points to the wrong border. The small picture shows what it looks like in a presentation with a white background.

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Build plot
2. Disable border in construction area
3. Export plot

OBSERVED RESULT

thin line on the top and left border

EXPECTED RESULT

No boders

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Alexander Semke 2023-06-09 12:14:57 UTC
(In reply to Nikita from comment #0)
> Created attachment 159459 [details]
> The arrow points to the wrong border. The small picture shows what it looks
> like in a presentation with a white background.
> 
> SUMMARY
> ***
> NOTE: If you are reporting a crash, please try to attach a backtrace with
> debug symbols.
> See
> https://community.kde.org/Guidelines_and_HOWTOs/Debugging/
> How_to_create_useful_crash_reports
> ***
> 
> 
> STEPS TO REPRODUCE
> 1. Build plot
> 2. Disable border in construction area
> 3. Export plot
> 
> OBSERVED RESULT
> 
> thin line on the top and left border

I cannot reproduce this problem. How did you deactive the border? By selecting "no line" for the line style or by deactivating the options for the different borders?

Which option did you select in the export dialog? Export object's bounding box, current selection or complete worksheet?
Comment 2 Alexander Semke 2024-02-22 21:49:48 UTC
Git commit dabacb69d1b8c351f217543a2517acaedf89d6d7 by Alexander Semke.
Committed on 22/02/2024 at 21:49.
Pushed by asemke into branch 'master'.

[worksheet] moved the logic to draw the background to the central class Background
and also make use of it when drawing the canvas in WorksheetView. This also
fixes the problem with the border line that was drawn for the worksheet canvas.
FIXED-IN: 2.11

M  +1    -0    ChangeLog
M  +96   -1    src/backend/worksheet/Background.cpp
M  +2    -0    src/backend/worksheet/Background.h
M  +2    -6    src/backend/worksheet/plots/cartesian/BarPlot.cpp
M  +2    -6    src/backend/worksheet/plots/cartesian/BoxPlot.cpp
M  +2    -5    src/backend/worksheet/plots/cartesian/Histogram.cpp
M  +0    -89   src/backend/worksheet/plots/cartesian/Plot.cpp
M  +0    -1    src/backend/worksheet/plots/cartesian/PlotPrivate.h
M  +3    -6    src/backend/worksheet/plots/cartesian/XYCurve.cpp
M  +1    -81   src/commonfrontend/worksheet/WorksheetView.cpp

https://invent.kde.org/education/labplot/-/commit/dabacb69d1b8c351f217543a2517acaedf89d6d7