[worksheet] moved the logic to draw the background to the central class Background and also make use of it when drawing the canvas in WorksheetView. This also fixes the problem with the border line that was drawn for the worksheet canvas.

BUG: 470625
FIXED-IN: 2.11