src/backend/worksheet/plots/cartesian/BoxPlot.cpp
@@ -1587,12 +1587,8 @@ void BoxPlotPrivate::draw(QPainter* painter) {
 		if (!m_boxRect.at(i).isEmpty()) {
 			// draw the box filling
 			const auto* background = backgrounds.at(i);
-			if (background->enabled()) {
-				painter->setOpacity(backgrounds.at(i)->opacity());
-				painter->setPen(Qt::NoPen);
-				const QPolygonF& polygon = m_fillPolygon.at(i);
-				drawFillingPollygon(polygon, painter, background);
-			}
+			if (background->enabled())
+				background->draw(painter, m_fillPolygon.at(i));
 
 			// draw the border
 			const auto* borderLine = borderLines.at(i);
